--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <section class="page-section bg-light" id="portfolio">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading">Portfolio</h2>
+                <h2 class="section-heading">Portafolio</h2>
                 <h3 class="section-subheading text-muted">Proyectos realizados</h3>
             </div>
             <div class="row">
