--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/2.JPG" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">CM2</div>
@@ -171,7 +171,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/3.JPG" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">CM2</div>
@@ -825,7 +825,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">CM2 INGENIERIA</h2>
                                 <p class="item-intro text-muted">Rubro Ingeniería Topográfica.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="...." />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.JPG" alt="...." />
                                 <p> CM2 es un ingeniería especializada en el campo de la topografía , cartografía y
                                     geodesia</p>
                                 <ul class="list-inline">
@@ -870,7 +870,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Desarrollo de Aplicativo Facturación</h2>
                                 <p class="item-intro text-muted">Aplicativo Escritorio en C#.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.JPG" alt="..." />
                                 <p> Desarrollo de un Aplicativo que permita realizar el Registro de Clientes ,
                                     proveedores
                                     y Facturas, asi como el reporte de Ofertas de Contratación.</p>
@@ -914,7 +914,7 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Aplicativo de Reseñas Geodesicas</h2>
                                 <p class="item-intro text-muted">Aplicativo de Escritorio C#.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.JPG" alt="..." />
                                 <p>Aplicativo la generació automática de Reseñas Geodesicas , conectadas a un base de
                                     datos SQ</p>
                                 <ul class="list-inline">
