--- a/index.html
+++ b/index.html
@@ -46,24 +46,18 @@
             </div>
         </div>
     </nav>
-
-
     <!-- Masthead-->
     <header class="masthead">
         <div class="container">
             <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="assets/img/about/31.jpg" alt="..."/>
-                
-                <div class="masthead-heading">Hi!</div>
-
+                <img class="rounded-circle img-fluid" src="assets/img/about/31.jpg" alt="..."/>               
+                <div class="masthead-heading">Hi¡</div>
                 <div class="masthead-heading ">
-
                     <p class="text-border">
                         <span class="typed"></span>
-
                     </P>
 
-                    <div class="masthead-heading ">Developer Junior</div>
+                    <div class="masthead-heading ">Developer Junior </div>
                     <a class="btn btn-primary btn-xl text-uppercase" href="#services">Ver más</a>
                 </div>
     </header>
