--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <span class="typed"></span>
                     </P>
 
-                    <div class="masthead-heading ">Developer Junior </div>
+                    <div class="masthead-heading ">Developer Junior / GIS Analyst</div>
                     <a class="btn btn-primary btn-xl text-uppercase" href="#services">Ver más</a>
                 </div>
     </header>
