--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <section class="page-section" id="about">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading">Experiencia Profesinal</h2>
+                <h2 class="section-heading">Experiencia Profesional</h2>
                 <h3 class="section-subheading text-muted">Línea Temporal de Experiencia.</h3>
             </div>
             <ul class="timeline">
