--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                                     </li>
                                     <li>
                                         <strong>Pagina:</strong>
-                                        <a href="https://www.cm2.pe/">https://www.cm2.pe/</a>
+                                        <a href="https://www.cm2.pe/" target="_blank">https://www.cm2.pe/</a>
                                     </li>
 
                                 </ul>
@@ -879,7 +879,7 @@
                                         <strong>Base de Datos:</strong> SQL Server / Access
                                     </li>
                                     <li>
-                                        <strong>Repositorio GitHub:</strong> <a href="https://github.com/JoelCollao/Sistema_de_Facturacion">Aplicativo de
+                                        <strong>Repositorio GitHub:</strong> <a href="https://github.com/JoelCollao/Sistema_de_Facturacion" target="_blank">Aplicativo de
                                             Facturación</a>
                                     </li>
                                 </ul>
@@ -924,7 +924,7 @@
                                         SQL Server
                                     </li>
                                     <li>
-                                        <strong>Repositorio GitHub:</strong> <a href="https://github.com/JoelCollao/Aplicativo_Resenas_Geodesicas">Aplicativo de Reseñas
+                                        <strong>Repositorio GitHub:</strong> <a href="https://github.com/JoelCollao/Aplicativo_Resenas_Geodesicas" target="_blank">Aplicativo de Reseñas
                                             Geodésicas</a>
                                     </li>
                                 </ul>
