--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
 
 
 
+
+
+
                     <!-- Portfolio item 1-->
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
@@ -243,6 +246,31 @@
                 <h3 class="section-subheading text-muted">Línea Temporal de Experiencia.</h3>
             </div>
             <ul class="timeline">
+         
+                <!-- AGREGACION DE NUEVA EXPERIENCIA -->
+                <li class="timeline-inverted">
+                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/NTTDATA.png"
+                            alt="..." /></div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4>Febr 2022 - Actualidad </h4>
+                            <h4 class="subheading">NTTDATA</h4>
+                            <h3>Developer Oracle .Net</h3>
+                        </div>
+                        <div class="timeline-body">
+                            <p class="text-muted">
+                            <ul>• Diseño</ul>
+                            <ul>• Desarrollo</ul>
+                            <ul>• Pruebas Unitarias</ul>
+                            <ul>• Documentación</ul>
+                            </p>
+                        </div>
+                    </div>
+                </li>
+
+                <!--FIN DE AGREGACION DE NUEVA EXPERIENCIA -->
+
+
                 <li>
                     <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg"
                             alt="..." /></div>
@@ -276,6 +304,8 @@
                         </div>
                     </div>
                 </li>
+
+
                 <li class="timeline-inverted">
                     <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.png"
                             alt="..." /></div>
@@ -807,58 +837,6 @@
     </footer>
     <!-- Portfolio Modals-->
     <!-- Portfolio item 1 modal popup-->
-    <!-- EXPERIENCIA EN NTTDATA -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg"
-                        alt="Close modal" /></div>
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-8">
-                            <div class="modal-body">
-                                <!-- Project details-->
-                                <h2 class="text-uppercase">CM2 INGENIERIA</h2>
-                                <p class="item-intro text-muted">Rubro Ingeniería Topográfica.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.JPG" alt="...." />
-                                <p> CM2 es un ingeniería especializada en el campo de la topografía , cartografía y
-                                    geodesia</p>
-                                <ul class="list-inline">
-
-                                    <li>
-                                        <strong>Lenguaje de Programación:</strong> PHP
-                                    </li>
-                                    <li>
-                                        <strong>Entorno de Desarrollo:</strong> CMS Wordpress
-                                    </li>
-                                    <li>
-                                        <strong>Base de Datos:</strong> MySQL
-                                    </li>
-                                    <li>
-                                        <strong>Pagina:</strong>
-                                        <a href="https://www.cm2.pe/" target="_blank">https://www.cm2.pe/</a>
-                                    </li>
-
-                                </ul>
-                                <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
-                                    type="button">
-                                    <i class="fas fa-times me-1"></i>
-                                    Cerrar Ventana
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-
-
-
-
 
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
