Insertar Musica de Cosplay

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
 
-
-
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
+
+
 
 <body id="page-top">
     <!-- Navigation-->
@@ -60,7 +60,17 @@
                     <div class="masthead-heading ">Developer Junior / GIS Analyst</div>
                     <a class="btn btn-primary btn-xl text-uppercase" href="#services">Ver más</a>
                 </div>
+            </div>
+            <center>
+                <audio controls  autoplay  loop>
+                    <source src="Music/Coldplay - Yellow Sub. Español.mp3"  type="audio/mp3">
+                </audio>
+                </center>
+        </div>
     </header>
+
+
+  
     <!-- Services-->
     <section class="page-section" id="services">
         <div class="container">
@@ -196,7 +206,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">-->
 
-
+                     
 
 
                     <!-- Portfolio item 5
