--- a/index.html
+++ b/index.html
@@ -310,15 +310,15 @@
                     </p>
                     <div class="row text-center">
                         <div class="col-md-3 mb-3">
-                            <div class="h2 text-primary">5+</div>
+                            <div class="h2 text-primary">8+</div>
                             <div class="text-muted">Años de Experiencia</div>
                         </div>
                         <div class="col-md-3 mb-3">
-                            <div class="h2 text-primary">50+</div>
+                            <div class="h2 text-primary">20+</div>
                             <div class="text-muted">Proyectos Completados</div>
                         </div>
                         <div class="col-md-3 mb-3">
-                            <div class="h2 text-primary">15+</div>
+                            <div class="h2 text-primary">10+</div>
                             <div class="text-muted">Tecnologías</div>
                         </div>
                         <div class="col-md-3 mb-3">
@@ -722,17 +722,18 @@
                         </div>
                         <div class="flex-grow-1">
                             <div class="d-flex justify-content-between align-items-start mb-2">
-                                <h4 class="mb-0">Developer Oracle .NET</h4>
+                                <h4 class="mb-0">Software Engineer</h4>
                                 <span class="badge bg-primary">Actual</span>
                             </div>
                             <h6 class="text-primary mb-2">NTTDATA | Feb 2022 - Actualidad</h6>
                             <p class="text-muted mb-3">
-                                Desarrollo y mantenimiento de aplicaciones empresariales usando .NET y Oracle. 
-                                Implementación de arquitecturas limpias, APIs RESTful y integración con servicios cloud.
+                                Desarrollo y mantenimiento de aplicaciones empresariales. 
+                                Implementación de arquitecturas limpias, APIs RESTful y integración con servicios cloud Azure.
                             </p>
                             <div class="d-flex gap-2 flex-wrap">
-                                <span class="skill-badge">.NET Core</span>
-                                <span class="skill-badge">Oracle</span>
+                                <span class="skill-badge">TypeScript</span>
+                                <span class="skill-badge">NodeJS</span>
+                                <span class="skill-badge">SQL Server</span>
                                 <span class="skill-badge">Azure</span>
                                 <span class="skill-badge">DevOps</span>
                             </div>
@@ -861,7 +862,6 @@
                         </div>
                         <div class="d-flex flex-wrap justify-content-center gap-2">
                             <span class="skill-badge">React</span>
-                            <span class="skill-badge">Vue.js</span>
                             <span class="skill-badge">Angular</span>
                             <span class="skill-badge">TypeScript</span>
                             <span class="skill-badge">JavaScript</span>
@@ -880,12 +880,10 @@
                             <h5>Backend</h5>
                         </div>
                         <div class="d-flex flex-wrap justify-content-center gap-2">
-                            <span class="skill-badge">.NET Core</span>
                             <span class="skill-badge">Node.js</span>
                             <span class="skill-badge">Python</span>
                             <span class="skill-badge">C#</span>
                             <span class="skill-badge">Java</span>
-                            <span class="skill-badge">PHP</span>
                             <span class="skill-badge">API REST</span>
                             <span class="skill-badge">GraphQL</span>
                         </div>
@@ -900,12 +898,9 @@
                             <h5>Cloud & DevOps</h5>
                         </div>
                         <div class="d-flex flex-wrap justify-content-center gap-2">
-                            <span class="skill-badge">AWS</span>
                             <span class="skill-badge">Azure</span>
-                            <span class="skill-badge">Google Cloud</span>
                             <span class="skill-badge">Docker</span>
-                            <span class="skill-badge">Kubernetes</span>
-                            <span class="skill-badge">Jenkins</span>
+                            <span class="skill-badge">Kubernetes</span>       
                             <span class="skill-badge">Git</span>
                             <span class="skill-badge">CI/CD</span>
                         </div>
@@ -921,8 +916,6 @@
                         </div>
                         <div class="d-flex flex-wrap justify-content-center gap-2">
                             <span class="skill-badge">Python</span>
-                            <span class="skill-badge">TensorFlow</span>
-                            <span class="skill-badge">PyTorch</span>
                             <span class="skill-badge">OpenAI API</span>
                             <span class="skill-badge">Pandas</span>
                             <span class="skill-badge">NumPy</span>
@@ -940,14 +933,12 @@
                         <h5><i class="fas fa-globe me-2 text-success"></i>Tecnologías GIS</h5>
                     </div>
                     <div class="d-flex flex-wrap justify-content-center gap-2">
-                        <span class="skill-badge">ArcGIS</span>
+                        <span class="skill-badge">ArcGIS Enterprice</span>
                         <span class="skill-badge">QGIS</span>
                         <span class="skill-badge">PostGIS</span>
                         <span class="skill-badge">Leaflet</span>
                         <span class="skill-badge">OpenLayers</span>
                         <span class="skill-badge">GeoServer</span>
-                        <span class="skill-badge">GDAL</span>
-                        <span class="skill-badge">Mapbox</span>
                     </div>
                 </div>
             </div>
@@ -963,35 +954,27 @@
                     <p class="lead mb-5">
                         Estoy disponible para proyectos freelance, consultoría tecnológica o nuevas oportunidades laborales.
                     </p>
-                    <div class="row text-center">
-                        <div class="col-md-4 mb-4">
+                    <!-- Cambiado: usar justify-content-center y col-md-6 para 2 elementos -->
+                    <div class="row justify-content-center text-center">
+                        <div class="col-md-6 col-lg-4 mb-4">
                             <div class="mb-3">
                                 <i class="fas fa-envelope fa-2x text-primary mb-2"></i>
                                 <h5>Email</h5>
                                 <a href="mailto:geoinformatico.jc@gmail.com" class="text-light">geoinformatico.jc@gmail.com</a>
                             </div>
                         </div>
-                        <div class="col-md-4 mb-4">
+                        <div class="col-md-6 col-lg-4 mb-4">
                             <div class="mb-3">
                                 <i class="fab fa-linkedin fa-2x text-primary mb-2"></i>
                                 <h5>LinkedIn</h5>
-                                <a href="#" class="text-light">linkedin.com/in/joelcollao</a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 mb-4">
-                            <div class="mb-3">
-                                <i class="fab fa-github fa-2x text-primary mb-2"></i>
-                                <h5>GitHub</h5>
-                                <a href="https://github.com/JoelCollao" class="text-light">github.com/JoelCollao</a>
+                                <a href="https://www.linkedin.com/in/joel-peter-collao-acra/" class="text-light">linkedin.com/in/joelcollao</a>
                             </div>
                         </div>
                     </div>
                     <div class="mt-4">
-                        <a href="mailto:geoinformatico.jc@gmail.com" class="btn btn-primary btn-lg me-3">
-                            <i class="fas fa-envelope me-2"></i>Enviar Email
-                        </a>
-                        <a href="#" class="btn btn-outline-light btn-lg">
-                            <i class="fas fa-download me-2"></i>Descargar CV
+                        <a href="https://wa.me/51980481462?text=Hola%20Joel,%20me%20interesa%20conocer%20más%20sobre%20tus%20servicios%20profesionales" 
+                           target="_blank" class="btn btn-success btn-lg me-3">
+                            <i class="fab fa-whatsapp me-2"></i>Contactar por WhatsApp
                         </a>
                     </div>
                 </div>
@@ -1004,7 +987,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 text-lg-start">
-                    <div class="code-font fw-bold">Joel.dev © 2024</div>
+                    <div class="code-font fw-bold">Joel.dev © 2026</div>
                 </div>
                 <div class="col-lg-4 my-3 my-lg-0 text-center">
                     <a class="btn btn-dark btn-social mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -1012,7 +995,7 @@
                     <a class="btn btn-dark btn-social mx-2" href="#"><i class="fab fa-twitter"></i></a>
                 </div>
                 <div class="col-lg-4 text-lg-end">
-                    <span class="text-muted small">Hecho con ❤️ y mucho ☕</span>
+                    <span class="text-muted small">Si puedes imaginarlo, puedes programarlo ☕</span>
                 </div>
             </div>
         </div>
